# AlgorytmyGrafowe

./: CMakeLists.txt  LoadFromFile.cpp  LoadFromFile.h  main.cpp
Header/: AlgorithmsMST.h  EdgesSortedList.h  GraphRepresentation.h  KruskalAlgorithm.h  LoadFromFile.h  Matrix.h  PrimAlgorithm.h  Queue.h
Header/MinimalSpanningTree/: AlgorithmsMST.h  KruskalAlgorithm.h  PrimAlgorithm.h
Header/RepresentationOfGraph/: CombinedList.h  GraphRepresentation.h  Matrix.h
Header/TheShortestPath/: AlgorithmsTheShortestPath.h  BellmanFordAlgorithm.cpp  BellmanFordAlgorithm.h  DijkstraAlgorithm.h
Source/: AlgorithmsMST.cpp  CombinedList.cpp  EdgesSortedList.cpp  GraphRepresentation.cpp  KruskalAlgorithm.cpp  LoadFromFile.cpp  Matrix.cpp  PrimAlgorithm.cpp  Queue.cpp
Source/MinimalSpanningTree/: AlgorithmsMST.cpp  KruskalAlgorithm.cpp  PrimAlgorithm.cpp
Source/RepresentationOfGraph/: CombinedList.cpp  GraphRepresentation.cpp  Matrix.cpp
Source/TheShortestPath/: AlgorithmsTheShortestPath.cpp  BellmanFordAlgorithm.cpp  DijkstraAlgorithm.cpp  Queue.cpp
Test/: Tests.cpp  Tests.h
